--- a/br.com.searchmed.core/pom.xml
+++ b/br.com.searchmed.core/pom.xml
@@ -5,7 +5,8 @@
 	<artifactId>br.com.searchmed.core</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 
-	<dependencies>
+	<dependencies>		
+		
 		<dependency>
 			<groupId>javax.inject</groupId>
 			<artifactId>javax.inject</artifactId>
@@ -94,6 +95,12 @@
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>5.1.39</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz</artifactId>
+		    <version>2.2.3</version>
+		</dependency>
+		
 	</dependencies>
 
 </project>
