--- a/br.com.searchmed.core/pom.xml
+++ b/br.com.searchmed.core/pom.xml
@@ -98,7 +98,12 @@
 		<dependency>
 		    <groupId>org.quartz-scheduler</groupId>
 		    <artifactId>quartz</artifactId>
-		    <version>2.2.3</version>
+		    <version>1.8.0</version>
+		</dependency>		
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-support</artifactId>
+		    <version>2.0.8</version>
 		</dependency>
 		
 	</dependencies>
